[fix] layout color and collapse

--- a/app/javascript/stylesheets/layouts.scss
+++ b/app/javascript/stylesheets/layouts.scss
@@ -36,3 +36,10 @@ $pagenation_color: rgb(169,169,169);
   font-size: 12px;
   color: #6c757d;
 }
+
+/* nav-collapse */
+.nav-collapse {
+  position: absolute;
+  z-index: 2;
+  background-color: rgba(225, 225, 225, 0.6);
+}
