--- a/app/javascript/stylesheets/top.scss
+++ b/app/javascript/stylesheets/top.scss
@@ -21,7 +21,7 @@ body {
 
 .scrollbox {
   padding: 80px, 0;
-  background-color: #00000033;
+  background-color: rgba(225, 225, 225, 0.4);
 }
 
 .about-background {
